[package]
name = "my_stm32_app2"
version = "0.1.0"
authors = ["qinhuajun <qinhuajun@outlook.com>"]
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-probe = { version = "1.0.0", features = ["defmt"] }
defmt = "1.0.1"
defmt-rtt = "1.1.0"
static_cell = "2"
embassy-sync = { version = "0.7.2", features = ["defmt"] }
#stm32f4xx-hal = "0.23.0"

[dependencies.embassy-stm32]
version = "0.4.0"
features = ["stm32f429ig", "memory-x", "single-bank", "defmt", "time-driver-any"]

[dependencies.embassy-executor]
version = "0.9.1"
features = ["arch-cortex-m", "executor-thread", "defmt"]

[dependencies.embassy-time]
version = "0.5.0"
features = ["defmt", "defmt-timestamp-uptime"]

[build-dependencies]
reqwest = { version = "0.12.24", features = ["blocking"] }

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"